[gd_scene load_steps=8 format=3]

[ext_resource type="Texture2D" uid="uid://bd2iixuaf8tln" path="res://Assets2D/Logo/CB.png" id="1"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnOp.tres" id="4"]
[ext_resource type="StyleBox" uid="uid://bvc4xkbpf56rx" path="res://Assets2D/Theme/broadBorder.tres" id="4_lsq83"]
[ext_resource type="FontFile" path="res://Assets2D/Fonts/UI.tres" id="5_g5hnp"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/broadBorderBlack.tres" id="5_pwe3t"]
[ext_resource type="Script" path="res://MGF Scene/Season/Match.gd" id="6"]
[ext_resource type="StyleBox" uid="uid://dagwd3331fh2k" path="res://Assets2D/Theme/broadBorderWhite.tres" id="8"]

[node name="Match" type="Control"]
custom_minimum_size = Vector2(288, 72)
layout_mode = 3
anchors_preset = 0
offset_right = 288.0
offset_bottom = 72.0
script = ExtResource("6")

[node name="bgMain" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = ExtResource("8")

[node name="panel" type="Panel" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = ExtResource("8")

[node name="bgA" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 42.0
offset_top = 3.0
offset_right = -178.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = ExtResource("4")
theme_override_styles/hover = ExtResource("4")
theme_override_styles/pressed = ExtResource("4")
theme_override_styles/disabled = ExtResource("4")
theme_override_styles/focus = ExtResource("4")
disabled = true

[node name="bgB" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 186.0
offset_top = 4.0
offset_right = -34.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = ExtResource("4")
theme_override_styles/hover = ExtResource("4")
theme_override_styles/pressed = ExtResource("4")
theme_override_styles/disabled = ExtResource("4")
theme_override_styles/focus = ExtResource("4")
disabled = true

[node name="teamA" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_right = -176.0
texture = ExtResource("1")
expand_mode = 1
stretch_mode = 5

[node name="teamB" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 184.0
offset_right = -32.0
texture = ExtResource("1")
expand_mode = 1
stretch_mode = 5

[node name="Match" type="Label" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_g5hnp")
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="goalA" type="Label" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 112.0
offset_right = -144.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_g5hnp")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="goalB" type="Label" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 152.0
offset_right = -104.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_g5hnp")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="vs" type="Label" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 136.0
offset_right = -128.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_g5hnp")
theme_override_font_sizes/font_size = 20
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="info" type="Button" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme_override_styles/normal = ExtResource("5_pwe3t")
theme_override_styles/hover = ExtResource("4_lsq83")
theme_override_styles/pressed = ExtResource("4_lsq83")
theme_override_styles/disabled = ExtResource("4_lsq83")
theme_override_styles/focus = ExtResource("4_lsq83")

[connection signal="pressed" from="info" to="." method="_on_info_pressed"]
